<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com | smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========6.14==========
2026-
1. 滚动条点击背景改为跳转到中间

==========6.13==========
2026-2-7
1. picker尽可能使选中项居中显示
2. expander支持面板布局，并添加折叠触发函数
2026-2-11
1. 修复flyout对UI框架事件的破坏

==========6.12==========
2026-1-12
1. 纵向、横向面板对未指定宽度的另一种排布面板，会获取其中最大控件对应尺寸，作为无给定大小的默认值
2. picker修复右侧宽度未对齐的问题

==========6.11==========
2026-1-1
1. 新增navigation 导航边栏
2. ui的滚动条适时出现
3. panel允许设置背景色与圆角大小
4. 样式表添加警告按钮warningbutton
5. 优化button2图标对齐
6. 修复ui删除时的问题
7. 优化treeview元素布局
8. treeview添加全部展开和全部关闭方法
9. link的url参数默认为空，此时不显示提示框

==========6.9==========
2025-12-2
1. 统一无边框浮出窗口创建方法，对不同平台的弹窗分别处理
2. 滚动条隐藏动画
3. 优化togglebutton动画

==========6.8==========
2025-10-25
1. entry, passwordbox, checkbutton, scalebar 禁用可自定义文本以及背景颜色
2. 优化treeview逻辑代码
3. ui可设置是否需要初始化TinUIXml

==========6.7==========
2025-10-11
1. 测试代码不受GPLv3和LGPLv3限制
2. scalebar支持纵向
3. 优化scalebar移动响应
4. 修复scalebar使用面板布局移动回调出错的问题，并适配ExpandPanel

==========6.6==========
2025-9-14
1. v/h Panel当添加未指定控件元素时，每次布局实时获得控件元素尺寸
2. 优化对话框底栏

==========6.5==========
2025-9-8
1. v/h Panel 新增删除特定子元素、忽略特定子元素功能

==========6.4==========
2025-9-5
1. 简化浮出窗口实现
2. Panel.add_child添加索引参数
3. 新增segmentbutton 分段按钮

==========6.3==========
2025-8-18
1. 优化listview的居中计算，更准确
2. menubutton支持Segoe图标
3. menubar支持按钮Segoe图标
4. HorizonPanel, VerticalPanel添加clear_children方法
5. entry标识符改为Segoe Fluent Icon字符

==========6.2==========
2025-8-16
1. listview选项背景改为圆角，注意，使用内部ui绘制背景
2. 提供Mac下的字体解决建议
3. listview程序选择时会尽量将选项保持在视图中央
4. radiobutton选项背景改为圆角
5. progressbar使用圆角
6. textbox使用圆角并取消边框宽度参数
7. 添加button2延申样式accentbutton, toolbutton
***破坏性更新***
从TinUI-6.2版本开始，暗色样式正式匹配WinUI3暗色，亮色样式也将进行完全适配。
原本的Dark配色改名为淡钢蓝配色(SteelBlue)且不再更新。

==========6.1==========
2025-8-10
1. treeview拓展面板适配选项背景宽度
2. 纵向、横向面板添加控件未指定尺寸时，获取控件对应方向上的尺寸
3. TinUIXml支持tooltip
