@@ -36,11 +36,11 @@ add_button(self,pos:tuple,text:str,fg='black',bg='#CCCCCC',line='#CCCCCC',linew=
 >
 > funcs
 >
-> > `funcs[0]|funcs.change_command(new_func)`::为按钮绑定新函数
+> > `funcs.change_command(new_func)`::为按钮绑定新函数
 > >
-> > `funcs[1]|funcs.disable(fg='#7a7a7a',bg='#cccccc')`::禁用按钮
+> > `funcs.disable(fg='#7a7a7a',bg='#cccccc')`::禁用按钮
 > >
-> > `funcs[2]|funcs.active()`::激活按钮
+> > `funcs.active()`::激活按钮
 
 ![](https://github.com/Smart-Space/TinUI/raw/main/image/TinUI%E6%8C%89%E9%92%AE.gif)
 
