@@ -7,8 +7,10 @@
 
 
 ==========6.14==========
-2026-
+2026-2-18
 1. 滚动条点击背景改为跳转到中间
+2. button优化性能，弃用funclist下标
+3. button2优化性能
 
 ==========6.13==========
 2026-2-7
